public/stylesheets/homepage.css
body{
    background: rgba(0, 0, 0, .65) url('https://images.pexels.com/photos/2123337/pexels-photo-2123337.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
    background-blend-mode: hard-light;
    background-repeat: no-repeat;
    background-size: cover;
    overflow: hidden;
    color: aliceblue;
}



.navbar{
    display: none;
}

.footer{
    display: none;
}

form{
    margin: 0
}

#home-box {
    position: relative;
    top: 40vh;
    
  }

h6 a{
    text-decoration: none;
    color: white;

}



h6:hover{
    cursor: pointer;
}

#brand-row{
    transform: translateY(-40px);

}


.button-parent{
    display: flex;
    justify-content: center;
    flex-direction: column;

}

.confirm-button {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-self: center;
    /* margin-bottom: 20px; */
    padding: 6px 14px !important;
    font-family: 'Roboto', sans-serif;
    border-radius: 6px;    
    color: whitesmoke;
    background-color: green;
    border: none;
    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.8);
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;

    width: 125px;
    transition: background-color 1s, color 1s;
  }
  
  .confirm-button:focus {
    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
    outline: 0;
  }

  .confirm-button:hover {
    color: green;
    background: #fff;
  }



#forgot-button{
    margin: auto;
}


#forgot-button:hover{
    cursor: pointer;

}

.back-button:hover{
    cursor: pointer;
}

#back-button-0{
    transform: translateY(4.5vw);
}



@media all and (orientation:portrait) {

    body{
        background-size: 400%;
        background-position: 25% 20%;
    }

    main{
        transform: translateY(70px);
    }

    .cover-container{
        transform: translateY(-200px);
        max-height: 1000px;
    }

    .form-control{
        display: inline-block;
        width: 60%

    }

    input {
        max-width: 400px;
    }

    #forgotten-div{
        transform: translateY(40px);

    }

    #info-div{
        max-width: 390px;
        margin: auto;
        text-align: center;
    }

    #info-div > div{
        display: inline;
        text-align: center;
        text-align: justify;
    }


    #back-button-0{
        transform: translateY(195px);
    }

    #back-button-2{
        transform: translateY(-115px);
    }

    #back-button-3{
        transform: translateY(-75px);
    }


}

/* toast styling */

.toast{
    position:absolute;
    z-index: 5;
    top: 100px;
    right: 100px;
    color: aliceblue;
}

@media all and (min-width: 250px) and (max-width: 900px){


    .toast{
        top: 300px;
        right: 25%;

    }
}

.success{
    background-color: green;
}

.error{
    background-color: red;
}

.invalid-feedback{
background-color: #212529d4;
border-radius: 2px;
}


/* change input shadow */
.form-control:focus {
    border-color: #cacacabc;
    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
  } 
  
  /* change checkbox color */
  .form-check-input:checked {
    background-color:#cacacabc !important;
    box-shadow: none;
  }
  .form-check-input:focus {
    box-shadow: none;
  }
  
  .form-control:focus, .bootstrap-select, .btn:focus  {
    border-color: #cacacabc;
    outline: 0;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
  }
  
  .form-select:focus{
    outline: none !important;
    box-shadow: none !important;
    border: 1px solid #008080;
  }
  
  /* bootstrap validation styling */
  
   
   .form-control.is-invalid, .was-validated  {
    background-image: none !important;
    border-color: #ced4da;
    padding-right: 0.75em;
    border-color: black !important;
  }
  
  .form-control.is-valid, .was-validated .form-control:valid  {
    background-image: none !important;
    border-color: #ced4da;
    padding-right: 0.75em;
    border-color: black !important;
  }
  
  .form-check-input {
  border-color: black !important;
  }
  
  .form-select:valid {
  --bs-form-select-bg-img: null; 
  }

